<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="order_summary">Order Summary</string>
    <string name="zero">$0.00</string>
    <string name="order">Order</string>
    <string name="email_order">E-Mail Order</string>
    <string name="map">Map</string>
    <string name="thank_you">Thank you!</string>
    <string name="total">Total $ </string>
    <string name="add_chocolate">Add Chocolate? </string>
    <string name="add_whipped_cream">Add Whipped Cream? </string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>
