<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:context="com.example.gusbru.justjava.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/name"/>

        <TextView
                style="@style/HeaderText"
                android:text="@string/toppings" />

        <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                style="@style/checkBoxStyle"
                android:text="@string/whipped_cream"/>

        <CheckBox
                android:id="@+id/chocolate_checkbox"
                style="@style/checkBoxStyle"
                android:text="@string/chocolate" />

        <TextView
                style="@style/HeaderText"
                android:text="@string/quantity" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

            <Button
                    android:id="@+id/decrease_quantity_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decrementQuantity"
                    android:text="@string/minus"/>

            <TextView
                    android:id="@+id/quantity_label"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/one"/>

            <Button
                    android:id="@+id/increase_quantity_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="incrementQuantity"
                    android:text="@string/plus"/>

        </LinearLayout>

        <TextView
                style="@style/HeaderText"
                android:text="@string/order_summary"/>

        <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/zero"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarStyle">

            <Button
                    android:id="@+id/order_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="submitOrder"
                    android:text="@string/order"
                    style="?android:attr/buttonBarButtonStyle"/>

            <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="sendToEmail"
                    android:text="@string/email_order"
                    style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <Button
                    android:id="@+id/map_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:onClick="openMap"
                    android:text="@string/map"/>
        </LinearLayout>


    </LinearLayout>


</ScrollView>
